<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>command_interfaces</name>
  <version>0.0.0</version>
  <description>Interfaces (services) for the command server.</description>

  <maintainer email="gokturkcan@todo.todo">gokturkcan</maintainer>
  <license>TODO: License declaration</license>

  <!-- This is an ament_cmake package -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- For interface generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Mark as an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
