<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>command_server_pkg</name>
  <version>0.0.0</version>
  <description>Command server node providing the /compute_command service.</description>

  <maintainer email="gokturkcan@todo.todo">gokturkcan</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Build tools for ament_python packages -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Node runtime dependency -->
  <depend>rclpy</depend>
  <!-- Depend on the interface package -->
  <depend>command_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
